--- a/beta/fullrelease.user.css
+++ b/beta/fullrelease.user.css
@@ -1,15 +1,14 @@
-@-moz-document domain("e621.net"), domain("e926.net") {
+@-moz-document regexp('https://e621.net(/.*)?') {
 /* ==UserStyle==
-@name           Calm e621
+@name           testeeeee
 @namespace      e621.net
 @version        1.0.0
 @description    A muted, easy on the eyes style for e621.
 @author         mandorinn
 @preprocessor stylus
 ==/UserStyle== */
-}
 
-@-moz-document domain("e621.net"), domain("e926.net") {
+	
 :root, [data-th-main="hexagon"] * {
     --thin-scrollbar: var(--true);
     --main-page-background: url(https://static1.e621.net/data/09/f8/09f84e1224df7b3502456589dd75c0c3.jpg)!important;
@@ -135,7 +134,7 @@
 }
 [data-th-main="bloodlust"] * {
 	--bg-300: #3d3d3d;
-	--bg-400: #252525
+	--bg-400: #252525;
 	--bg: #171717;
 	--bg-visiting: #f3f3f3;
     --bg-visiting-hover:#f0f0f0;
@@ -307,7 +306,7 @@
 }
 /* Body things */
 	body {
-	background-color: var(--bg-300)
+	background-color: var(--bg)!important;
 	background-image: none!important;
 	color: var(--base-text)!important;
 	font-family: var(--main-font);
@@ -328,10 +327,10 @@
     background-color: var(--bg)!important
 	}
 	a {
-	color: var(--base-text)!important
+	color: var(--base-text)!important;
 	background: none!important;
 		&:hover {
-		color: var(--base-text-hover)!important
+		color: var(--base-text-hover)!important;
 		background: none!important;
 		}
 	}
@@ -804,6 +803,7 @@
     margin: .5rem 1rem;
     font-size: 1.1rem;
 	}
+	
 }
 
 /* Posts page stuff */ 
@@ -923,7 +923,7 @@
     border-radius: 8px!important;
     padding: .25rem;
     color: var(--base-text);
-	border: 2px solid var(--bg-300)
+	border: 2px solid var(--bg-300);
 	overflow:hidden;
 	}
 	#mode-box form select:focus {
@@ -1030,7 +1030,7 @@
 	#image-container.blacklisted 
 	.styled-dtext div.post-thumbnail.blacklisted.dtext {
 	border-radius: 0!important;
-	width: 10rem;!important;
+	width: 10rem!important;
 	margin-right: auto;
 	}
 	.post-preview.post-status-deleted a {
@@ -1047,13 +1047,13 @@
 	.post-preview.post-status-deleted a::before {
 	content: "Deleted";
 	background-color: var(--deleted-bg);
-	color: var(--deleted-text)
+	color: var(--deleted-text);
 	position: absolute;
 	display: flex;
 	align-items: center!important;
 	justify-content: center!important;
 	font-size: 1.3rem;
-	height: 100%
+	height: 100%;
 	bottom: 0;
 	opacity: 1;
 	width: 95%;
@@ -1169,7 +1169,7 @@
 	}
 	.styled-dtext div.expandable > div.expandable-header > .section-arrow::after {
 	font-family: "Font Awesome 5 Free";
-	content: "\f0d2"
+	content: "\f0d2";
 	position: relative;
 	height: 1ch;
 	transition: 100ms;
@@ -1192,7 +1192,7 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
-		border-right: 2px solid var(--bg-300)!important
+		border-right: 2px solid var(--bg-300)!important;
 		height: 100%;
 		width: 90%;
 			.name-rank {
@@ -1203,7 +1203,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin .5rem auto;
+		margin: .5rem auto;
 		max-width: 90%;
 		position: relative;
 		aspect-ratio: 1/1;
@@ -1240,10 +1240,10 @@
 				position: relative;
 				}
 				a::before {
-				content: "Deleted"
+				content: "Deleted";
 				background-color: var(--deleted-bg);
 				border: 5px solid var(--elements-highlight);
-				color: var(--deleted-text)
+				color: var(--deleted-text);
 				position: absolute;
 				display: flex;
 				height: 100%;
@@ -1258,9 +1258,9 @@
 			}
 			.blacklisted {
 				a::before {
-				content: "Blacklisted"
+				content: "Blacklisted";
 				background-color: var(--flagged);
-				color: var(--deleted-text)
+				color: var(--deleted-text);
 				height: 100%;
 				width: 100%;
 				position: absolute;
@@ -1309,7 +1309,7 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
-		border-right: 2px solid var(--bg-300)
+		border-right: 2px solid var(--bg-300);
 		height: 100%;
 		width: 90%;
 			.name-rank {
@@ -1320,7 +1320,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			margin .5rem auto;
+			margin: .5rem auto;
 			max-width: 90%!important;
 			position: relative;
 			aspect-ratio: 1/1;
@@ -1358,10 +1358,10 @@
 				position: relative;
 				}
 				a::before {
-				content: "Deleted"
+				content: "Deleted";
 				background-color: var(--deleted-bg);
 				border: 5px solid var(--elements-highlight);
-				color: var(--deleted-text)
+				color: var(--deleted-text);
 				position: absolute;
 				display: flex;
 				height: 100%;
@@ -1375,9 +1375,9 @@
 			}
 			.blacklisted {
 				a::before {
-				content: "Blacklisted"
+				content: "Blacklisted";
 				background-color: var(--flagged);
-				color: var(--deleted-text)
+				color: var(--deleted-text);
 				height: 100%;
 				width: 100%;
 				position: absolute;
@@ -1422,8 +1422,10 @@
     background-color: var(--bg)!important;
 	}
 
+	
+
 @-moz-document url-prefix("https://e621.net/users/"), url-prefix("https://e926.net/users/") {
-div#c-users div#a-show .bottom-section{
+	div#c-users div#a-show .bottom-section{
     padding: 1rem;
     max-width: 55vw;
 	}
@@ -1524,8 +1526,7 @@ div#c-users div#a-show .bottom-section{
     outline: 5px solid var(--bg-300)!important;
     color: var(--deleted-text)!important;
 	}
-}
-
+}	
 /* Tag Changes */
 	#p-revert-listing {
     max-width: 90vw;
@@ -1682,9 +1683,8 @@ div#c-users div#a-show .bottom-section{
 	input[type="file"]button {
     color: pink;
     }
-
 @-moz-document url("https://e621.net/"), url("https://e926.net/"), url("https://e926.net"), url("https://e621.net") {
-html {
+	html {
 	overflow: hidden;
 	}
 	body {
@@ -1775,4 +1775,4 @@ html {
     margin-top: .2rem;
     margin-left: .05rem;
 	}
-}
+    }
